src/objects/Student_Scoring_Skill__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Skill_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Student Scoring Skills</relationshipLabel>
        <relationshipName>Student_Scoring_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student Scoring Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SK-{0000}</displayFormat>
        <label>Student Scoring Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Scoring Skills</pluralLabel>
    <recordTypes>
        <fullName>Java</fullName>
        <active>true</active>
        <description>Record Type for Java</description>
        <label>Java</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHP</fullName>
        <active>true</active>
        <description>Record type for PHP Scoring</description>
        <label>PHP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce</fullName>
        <active>true</active>
        <description>Record type for Salesforce</description>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>